# sql_trainer

./: .gitignore  README.md  conftest.py  pyproject.toml
src/: log.txt  main.py  training_db.sqlite3
src/config/: settings.py
src/di/: __init__.py  di.py
src/gui_app/: main_window.py
src/services/: database.py  engine.py  loguru_service.py
src/tests/: fixtures.py
src/tests/fixtures/: db.py
src/tests/test_services/: test_cursor_service.py
src/tests/test_settings/: test_settings.py
